--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project configuration
 cmake_minimum_required(VERSION 3.10)                                                                          
-project(PieceCake)                                                                                     
+project(PieceOfCake)                                                                                     
       
 set(CMAKE_CXX_STANDARD 17)                                                                                    
 set(CMAKE_MODULE_PATH "${CMAKE_BINARY_DIR}" "${CMAKE_MODULE_PATH}")                                           
