--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -2,8 +2,24 @@ add_executable(${PROJECT_NAME}
 	main.cpp
 )
 
+target_include_directories(${PROJECT_NAME} 
+	PRIVATE 
+	"${PROJECT_SOURCE_DIR}/include/rendering/window/"
+	"${PROJECT_SOURCE_DIR}/include/rendering/"
+	"${PROJECT_SOURCE_DIR}/include/utils/"
+)
+
+target_link_libraries(${PROJECT_NAME}
+	# Global libraries
+	utils
+
+	rendering
+	window
+)
+
 # Libraries loading and linking
 message("-=-=-=-=- Checking and loading libs -=-=-=-=-")
+
 # GLFW -- Load with GLEW help
 find_package(PkgConfig REQUIRED) 
 find_package(glfw3 3.2 REQUIRED)
@@ -32,4 +48,3 @@ else()
 endif(VULKAN_FOUND)
 message("-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-")
 
-target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/include/main")
