--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -4,9 +4,19 @@ add_library(rendering
 	SwapChain.cpp
 )
 
+find_package(Vulkan REQUIRED)
+find_package(glfw3 3.2 REQUIRED)
+
 target_include_directories(rendering
 	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/rendering/"
+	glfw
+	Vulkan::Vulkan
+)
+
+target_link_libraries(rendering
+	Vulkan::Vulkan
+	glfw
 )
 
 add_subdirectory(window)
