--- a/starter.cfg
+++ b/starter.cfg
@@ -1,3 +1,4 @@
-Project name:PieceOfCake/
-Release:False/
-Memory checking:False/
+Project name:PieceOfCake;
+Release:True;
+Memory checking:False;
+GLSLC path application:/usr/bin/glslc;
