--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -23,7 +23,7 @@ message("-=-=-=-=- Checking and loading libs -=-=-=-=-")
 # GLFW -- Load with GLEW help
 find_package(PkgConfig REQUIRED) 
 find_package(glfw3 3.2 REQUIRED)
-find_package(GLEW Required)
+find_package(GLEW REQUIRED)
 pkg_search_module(GLFW REQUIRED glfw3)    
 
 # Check if Glfw was been fund
