--- a/starter.cfg
+++ b/starter.cfg
@@ -1,5 +1,5 @@
 Project name=PieceOfCake;
-Release=True;
+Release=False;
 Memory checking=False;
 GLSLC path application=/usr/bin/glslc;
 Cmake vcpkg path=D:/Softwares/vcpackage/vcpkg/scripts/buildsystems/vcpkg.cmake;
