--- a/src/rendering/window/CMakeLists.txt
+++ b/src/rendering/window/CMakeLists.txt
@@ -1,19 +1,16 @@
+find_package(Vulkan REQUIRED)
+find_package(glfw3 3.2 REQUIRED)
+
 add_library(window
 	Window.cpp
 )
 
-find_package(glfw3 3.2 REQUIRED)
-find_package(Vulkan REQUIRED)
-
 target_include_directories(window
-	PUBLIC
+	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/rendering/window/"
-	"${PROJECT_SOURCE_DIR}/include/rendering/"
-	glfw
-	Vulkan::Vulkan
 )
 
 target_link_libraries(window
-	glfw
 	Vulkan::Vulkan
+	glfw 
 )
