--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -1,24 +1,16 @@
-add_library(rendering
-	FamilyQueues.cpp
-	Application.cpp
-	SwapChain.cpp
-)
-
 find_package(Vulkan REQUIRED)
-find_package(glfw3 3.2 REQUIRED)
+
+add_library(rendering
+	VulkanDebugger.cpp
+)
 
 target_include_directories(rendering
 	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/rendering/"
-	"${PROJECT_SOURCE_DIR}/include/utils/"
-
-	glfw
-	Vulkan::Vulkan
 )
 
 target_link_libraries(rendering
 	Vulkan::Vulkan
-	glfw 
 )
 
 add_subdirectory(window)
