--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -23,6 +23,7 @@ message("-=-=-=-=- Checking and loading libs -=-=-=-=-")
 find_package(PkgConfig REQUIRED) 
 find_package(glfw3 3.2 REQUIRED)
 find_package(GLEW REQUIRED)
+find_package(glm REQUIRED)
 pkg_search_module(GLFW REQUIRED glfw3)    
 
 # Check if Glfw was been fund
@@ -40,10 +41,18 @@ find_package(Vulkan REQUIRED)
 # Check if Vulkan was been found
 if (VULKAN_FOUND)
 	message(STATUS "${GREEN}> Vulkan lib has been found.${COLOR_RESET}")
-	target_include_directories(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan)
 	target_link_libraries(${PROJECT_NAME} Vulkan::Vulkan)
 else()
 	message(STATUS "${RED}> Couldn't find Vulkan lib!${COLOR_RESET}")
 endif(VULKAN_FOUND)
+
+# Check if glm was been found
+if (glm_FOUND)
+	message(STATUS "${GREEN}> glm lib has been found.${COLOR_RESET}")
+	target_link_libraries(${PROJECT_NAME} glm)
+else()
+	message(STATUS "${RED}> Couldn't find glm lib!${COLOR_RESET}")
+endif(glm_FOUND)
+
 message("-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-")
 
