--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -15,6 +15,7 @@ target_include_directories(rendering
 	"${PROJECT_SOURCE_DIR}/include/rendering/window/"
 	"${PROJECT_SOURCE_DIR}/include/utils/"
 	"${PROJECT_SOURCE_DIR}/include/input_device/"
+	"${PROJECT_SOURCE_DIR}/include/main/"
 )
 
 target_link_libraries(rendering
