--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -6,4 +6,5 @@ add_library(utils
 target_include_directories(utils
 	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/utils/"
+	"${PROJECT_SOURCE_DIR}/include/rendering/"
 )
