--- a/src/rendering/textures/CMakeLists.txt
+++ b/src/rendering/textures/CMakeLists.txt
@@ -10,6 +10,7 @@ target_include_directories(textures
 	"${PROJECT_SOURCE_DIR}/include/rendering/textures/"
 	"${PROJECT_SOURCE_DIR}/include/stb_image/"
 	"${PROJECT_SOURCE_DIR}/include/utils/"
+	"${PROJECT_SOURCE_DIR}/include/main/"
 )
 
 # target_link_libraries(textures
