Rendering and Refactor:
Textures are now managed by AssetPool class.

Added tiny_obj_loader.h file to upload 3D .obj models.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -7,4 +7,5 @@ target_include_directories(utils
 	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/utils/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/"
+	"${PROJECT_SOURCE_DIR}/include/rendering/textures/"
 )
