--- a/src/rendering/textures/CMakeLists.txt
+++ b/src/rendering/textures/CMakeLists.txt
@@ -8,6 +8,9 @@ add_library(textures
 target_include_directories(textures
 	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/rendering/textures/"
+	"${PROJECT_SOURCE_DIR}/include/rendering/window/"
+	"${PROJECT_SOURCE_DIR}/include/rendering/"
+	"${PROJECT_SOURCE_DIR}/include/input_device/"
 	"${PROJECT_SOURCE_DIR}/include/stb_image/"
 	"${PROJECT_SOURCE_DIR}/include/utils/"
 	"${PROJECT_SOURCE_DIR}/include/main/"
