--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(Vulkan REQUIRED)
+
 add_library(utils
 	AssetPool.cpp
 	Utils.cpp
@@ -8,4 +10,8 @@ target_include_directories(utils
 	"${PROJECT_SOURCE_DIR}/include/utils/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/textures/"
+)
+
+target_link_libraries(utils
+	Vulkan::Vulkan
 )
