--- a/src/rendering/textures/CMakeLists.txt
+++ b/src/rendering/textures/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(Vulkan REQUIRED)
+find_package(glfw3 3.3 REQUIRED)
 # find_package(SDL2 REQUIRED)
 # find_package(SDL2_image REQUIRED)
 
@@ -14,6 +16,11 @@ target_include_directories(textures
 	"${PROJECT_SOURCE_DIR}/include/stb_image/"
 	"${PROJECT_SOURCE_DIR}/include/utils/"
 	"${PROJECT_SOURCE_DIR}/include/main/"
+)
+
+target_link_libraries(textures
+	Vulkan::Vulkan
+	glfw 
 )
 
 # target_link_libraries(textures
