Entity Component System:
Implemented ecs architecture for the game objects.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(input_device)
 add_subdirectory(utils)
 add_subdirectory(main)
 add_subdirectory(rendering)
+add_subdirectory(entity_component_system)
