--- a/src/entity_component_system/components/CMakeLists.txt
+++ b/src/entity_component_system/components/CMakeLists.txt
@@ -2,12 +2,14 @@
 
 add_library(components
 	Transform.cpp
+	PerspectiveCamera.cpp
 )
 
 target_include_directories(components
 	PRIVATE
 	"${PROJECT_SOURCE_DIR}/include/entity_component_system/"
 	"${PROJECT_SOURCE_DIR}/include/entity_component_system/components/"
+	"${PROJECT_SOURCE_DIR}/include/input_device/"
 )
 
 # target_link_libraries(input_device
