--- a/src/entity_component_system/components/CMakeLists.txt
+++ b/src/entity_component_system/components/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_library(components
 	Transform.cpp
 	PerspectiveCamera.cpp
+	ModelRenderer.cpp
 )
 
 target_include_directories(components
@@ -10,6 +11,7 @@ target_include_directories(components
 	"${PROJECT_SOURCE_DIR}/include/entity_component_system/"
 	"${PROJECT_SOURCE_DIR}/include/entity_component_system/components/"
 	"${PROJECT_SOURCE_DIR}/include/input_device/"
+	"${PROJECT_SOURCE_DIR}/include/rendering/"
 )
 
 # target_link_libraries(input_device
