--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(${PROJECT_NAME}
 target_include_directories(${PROJECT_NAME} 
 	PRIVATE 
 	"${PROJECT_SOURCE_DIR}/include/entity_component_system/"
+	"${PROJECT_SOURCE_DIR}/include/entity_component_system/components/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/window/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/textures/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/"
