--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(utils)
 add_subdirectory(main)
 add_subdirectory(rendering)
 add_subdirectory(entity_component_system)
+add_subdirectory(gui)
