--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(utils
 	"${PROJECT_SOURCE_DIR}/include/utils/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/"
 	"${PROJECT_SOURCE_DIR}/include/rendering/textures/"
-	"${PROJECT_SOURCE_DIR}/include/tiny_obj_loader/"
+	"${PROJECT_SOURCE_DIR}/libs/tiny_obj_loader/"
 )
 
 target_link_libraries(utils
