--- a/starter.cfg
+++ b/starter.cfg
@@ -1,5 +1,5 @@
 Project name=PieceOfCake;
 Release=False;
 Memory checking=False;
-GLSLC path application=D:/Softwares/VulkanSDK/1.3.243.0/Bin/glslc;
-Cmake vcpkg path=D:/Softwares/vcpackage/vcpkg/scripts/buildsystems/vcpkg.cmake;
+GLSLC path application=C:/VulkanSDK/1.3.275.0/Bin/glslc;
+Cmake vcpkg path=C:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake;
